<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99d9ea">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaNombre"
        android:hint="@string/nombre"
                android:singleLine="true"/>

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaApellidos"
        android:hint="@string/apelidos"
                android:singleLine="true" />

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaCorreoElectronico"
        android:hint="@string/correoElectronico"
                android:singleLine="true" />

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/cajaContraseña"
        android:hint="@string/contraseña"
                android:singleLine="true" />

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                android:inputType="textPassword"
        android:id="@+id/cajaConfirmarContraseña"
        android:hint="@string/confirmarContraseña"
                android:singleLine="true"/>

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaNombreDelNegocio"
        android:hint="@string/nombreDelNegocio"
                android:singleLine="true"/>

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaDomicilio"
        android:hint="@string/domicilio"
                android:singleLine="true"/>

            <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cajaTiempoDelNegocio"
        android:hint="@string/tiempoDelNegocio"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cajaGiroDelNegocio"
                android:hint="@string/giroDelNegocio"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left">

        <Button
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLimpiarFormulario"
            android:id="@+id/btnLimpiar"
            android:layout_gravity="center_horizontal"
            android:onClick="limpiarFormulario" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnSiguiente"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:onClick="abreDialogo" />
    </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>